# ai-trading-signal-engine

./: .gitignore  BUILD  MODULE.bazel  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json
docs/: CODING_STYLE_GOOGLE_TS.md  README_trading_signal_engine_FULL_SPEC.md  best_practices.md
libs/db/: .envsample  BUILD  knex.ts  knex_migrate.js  knexfile.js  knexfile.ts  package.json
libs/db/migrations/: 20260216_initial_schema.js  BUILD  migrations.integration.test.js  migrations.test.js
scheduler/: .envsample  BUILD  README.md  app.ts  package.json  universe.ts
services/market-data-service/: .envsample  BUILD  README.md  app.test.ts  app.ts  package.json  tsconfig.json
